# libfolia

./: .gitignore  .travis.yml  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  TODO  bootstrap  bootstrap.sh  codemeta.json  config.h.in  configure.ac  dox.cfg  folia.pc.in  static.cxx
.github/workflows/: cleanup.yml  libfolia.yml
docs/: Makefile.am  dox.cfg  folialint.1
include/: Makefile.am
include/folia/: Makefile.am  document.h  folia.h  foliautils.h
include/libfolia/: Makefile.am  document.h  folia.h  folia_builder.h  folia_document.h  folia_engine.h  folia_impl.h  folia_metadata.h  folia_processor.h  folia_properties.h  folia_provenance.h  folia_reader.h  folia_subclasses.h  folia_textpolicy.h  folia_types.h  folia_utils.h  foliautils.h  properties.h
m4/: Makefile.am  ac_osx_pkg.m4
src/: Makefile.am  document.cxx  folia.cxx  folia_builder.cxx  folia_document.cxx  folia_engine.cxx  folia_impl.cxx  folia_processor.cxx  folia_properties.cxx  folia_provenance.cxx  folia_reader.cxx  folia_subclasses.cxx  folia_textpolicy.cxx  folia_types.cxx  folia_utils.cxx  foliadiff.sh  folialint.cxx  foliaproperties.cxx  foliatypes.cxx  foliautils.cxx  simpletest.cxx
